--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,20 @@ main{
     width: 100%;
     margin: 0px auto
 }
+input
+{
+    width: 170px;
+    height: 25px;
+}
+
+input:valid {
+    background-color: #ddffdd;
+  }
+
+form:invalid button {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 
 .webgl
 {
